tests/expectations/compiler/function/global_shadow_function_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EAST0372006]: function `f1` shadowed by
    --> compiler-test:10:5
     |
  10 |     function f1(a: u8) -> u8 {
  11 |         return a * 100u8;
  12 |     }
     |     ^
"""]
